--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.3",
-    "react-typical": "^0.1.3",
+    "react-simple-typewriter": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
